--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: lil-chode-child
 logo: IMG_3562.jpg
 #description
 #show_downloads: true
-#theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal
